force-app/main/default/objects/Auto_Navigate_Event__e/Auto_Navigate_Event__e.object-meta.xml
<CustomObject>
    <label>Auto Navigate Event</label>
    <pluralLabel>Auto Navigate Events</pluralLabel>
</CustomObject>