force-app/main/default/objects/Auto_Navigate_Event__e/fields/Navigation_Path__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Path__c</fullName>
    <label>Navigation Path</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>