force-app/main/default/objects/Auto_Navigate_Event__e/fields/Target_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Ids__c</fullName>
    <label>Target User Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>